# zelda3

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  Dockerfile  LICENSE.txt  Makefile  Makefile.switch  README.md  Zelda3.sln  ancilla.c  ancilla.cpp  ancilla.h  assets.h  attract.c  attract.cpp  attract.h  audio.c  config.c  config.h  dsp_regs.h  dungeon.c  dungeon.cpp  dungeon.h  ending.c  ending.cpp  ending.h  extract_assets.bat  features.h  get_python_libs.bat  glsl_shader.c  glsl_shader.h  hud.c  hud.cpp  hud.h  load_gfx.c  load_gfx.cpp  load_gfx.h  main.c  main.cpp  (+75 more)
.github/: PULL_REQUEST_TEMPLATE.md
assets/: compile_resources.py  decode_music.py  extract_music.py  extract_resources.py  restool.py  sprite_sheet_info.py  sprite_sheets.py  tables.py  util.py
other/: extract_snapshot_log.py  glitches_faq.txt  make_text_dict.py  name_remap.txt  names.txt  replace_in_files.py
smb/: extract.py  smb1.zst  smbll.zst
snes/: apu.c  apu.cpp  apu.h  cart.c  cart.h  cpu.c  cpu.h  dma.c  dma.h  dsp.c  dsp.h  dsp_regs.h  input.cpp  input.h  ppu.c  ppu.cpp  ppu.h  saveload.h  snes.c  snes.cpp  snes.h  snes_other.c  snes_other.cpp  snes_regs.h  spc.c  spc.h  tracing.c  tracing.h
src/: attract.c  audio.h  config.h  dungeon.c  dungeon.h  ending.h  features.h  glsl_shader.h  hud.h  load_gfx.c  main.c  messaging.c  messaging.h  misc.h  nmi.c  nmi.h  opengl.c  overlord.h  overworld.h  player.c  player_oam.c  poly.c  poly.h  select_file.h  spc_player.c  sprite_main.c  sprite_main.h  tagalong.c  util.c  util.h  zelda_rtl.c
tables/: .gitignore  compile_music.py  restool.py  (+9 more)
(+34 files in other folders)
